[package]
name = "dioxus-bulma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0", features = ["html"] }
dioxus-desktop = "0.4.0"

[dev-dependencies]
dioxus-desktop = "0.4.0"